--- a/accountability_app/Gemfile
+++ b/accountability_app/Gemfile
@@ -34,6 +34,10 @@ gem 'typhoeus'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+group :production do
+  gem 'rails_12factor'
+end
+
 group :development, :test do
   gem 'pry-rails'
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
