--- a/accountability_app/Gemfile
+++ b/accountability_app/Gemfile
@@ -34,7 +34,7 @@ gem 'typhoeus'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
-
+gem 'rails_12factor', group: :production
 
 group :development, :test do
   gem 'pry-rails'
@@ -52,8 +52,4 @@ group :development, :test do
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
-end
-
-group :production do
-  gem 'rails_12factor'
 end
